[package]
name = "rust_block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
env_logger = "0.9"
log = "0.4"
wgpu = "0.18"
pollster = "0.2"
bytemuck = { version = "1.12", features = [ "derive" ] }

